; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/common/extr_bspfile.c_AddLump.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/common/extr_bspfile.c_AddLump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AddLump(i32* %0, %struct.TYPE_5__* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = load i32, i32* %8, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i64 %16
  store %struct.TYPE_4__* %17, %struct.TYPE_4__** %11, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @ftell(i32* %18)
  %20 = call i8* @LittleLong(i32 %19)
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  store i8* %20, i8** %22, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i8* @LittleLong(i32 %23)
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  store i8* %24, i8** %26, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = add nsw i32 %29, 3
  %31 = and i32 %30, -4
  %32 = call i32 @SafeWrite(i32* %27, i8* %28, i32 %31)
  ret void
}

declare dso_local i8* @LittleLong(i32) #1

declare dso_local i32 @ftell(i32*) #1

declare dso_local i32 @SafeWrite(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
